--- a/css/main.css
+++ b/css/main.css
@@ -19,19 +19,21 @@ table {
 
 }
 
-.cell {
-    width: 30px;
-    height: 30px;
-    border: inset 3px rgb(43, 43, 43);
+td {
+    width: 25px;
+    height: 25px;
+    border: inset 5px rgb(43, 43, 43);
     background-image: linear-gradient(to top right, rgb(37, 37, 37), grey);
+    /* background-color: rgb(89, 89, 89); */
     text-align: center;
     text-shadow: none;
     font-size: 25px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: transparent;
     /* color:black; */
-    transition: 0.4s;
+    transition: 0.2s;
 }
+
 
 .cell:hover {
     background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgb(38, 38, 38));
@@ -41,6 +43,8 @@ table {
 
 
 .shown {
+    background-image: none;
+    background-color: rgb(169, 169, 169);
     text-shadow: rgb(0, 0, 0) 2px 2px 3px;
     color: #c54914;
     font-size: 25px;
@@ -64,8 +68,24 @@ table {
     margin-right: auto;
 }
 
+.modal {
+    display: none;
+    text-align: center;
+    padding: 5px;
+    font-size: 35px;
+    background-color: #c54914;
+    width: 300px;
+    height: 100px;
+    box-shadow: black 1px 1px 2px;
+    position: absolute;
+    top: 50%;
+    right: 40%;
+    border-radius: inset 8px black;
+}
+
+
 h2 {
-    margin-top: 0px;
+    margin-top: 20px;
     font-size: 25px;
 }
 
