--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,26 @@ body {
 }
 
 h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+    /* transform: translate(50%,-50%); */
+    text-transform: uppercase;
+    font-family: verdana;
+    color: #f5f5f5;
+    font-size: 60px;
+    text-shadow: 1px 1px 1px #919191,
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191,
+        1px 6px 1px #919191,
+        1px 7px 1px #919191,
+        1px 8px 1px #919191,
+        1px 9px 1px #919191,
+        1px 10px 1px #919191,
+    1px 18px 6px rgba(16,16,16,0.4),
+    1px 22px 10px rgba(16,16,16,0.2),
+    1px 25px 35px rgba(16,16,16,0.2),
+    1px 30px 60px rgba(16,16,16,0.4);
+  }
 
 table {
     width: 450px;
@@ -52,24 +70,38 @@ td {
 }
 
 .btn {
+    font-family: verdana;
+    width: 70px;
     cursor: pointer;
+    border: none;
+    transition: 0.5s;
+    margin-bottom: 10px;
+}
 
+.btn:hover {
+    background-color: #c54914;
+    color: rgb(227, 227, 227);
+    width: 100px;
 }
 
 .smiley {
     box-shadow: inset grey 1px 0px 6px 0px;
     font-size: 50px;
     text-align: center;
-    border: inset 6px rgb(33, 33, 33);
-    width: 70px;
-    height: 70px;
+    border-radius: 50%;
+    border: inset 50% rgb(33, 33, 33);
+    width: 80px;
+    height: 80px;
+    padding-top: 10px;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+    cursor: pointer;
+    margin-bottom: 15px;
 }
 
 .modal {
-    display: none;
+    display: block;
     text-align: center;
     padding: 5px;
     font-size: 35px;
@@ -81,6 +113,13 @@ td {
     top: 50%;
     right: 40%;
     border-radius: inset 8px black;
+    color: #f5f5f5;
+    text-shadow: black 1px 1px 2px;
+}
+
+.reset {
+    position:absolute;
+    left: 115px;
 }
 
 
@@ -95,9 +134,10 @@ h2 {
     font-size: 25px;
     border: inset 6px rgb(33, 33, 33);
     width: 90px;
-    height: 30px;
+    height: 40px;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-right: auto;
     margin-left: auto;
 }
 
@@ -108,10 +148,27 @@ h2 {
     font-size: 25px;
     border: inset 6px rgb(33, 33, 33);
     width: 140px;
-    height: 30px;
+    height: 40px;
     text-align: center;
-    margin-top: 30px;
-    margin-left: 10%;
+    margin-left: auto;
+    margin-bottom: 20px;
+
+}
+
+.hints {
+    /* float: left; */
+    display: inline-block;
+    box-shadow: inset grey 1px 0px 6px 0px;
+    font-size: 25px;
+    border: inset 6px rgb(33, 33, 33);
+    width: 140px;
+    height: 40px;
+    text-align: center;
+    margin-left: auto;
+    cursor: pointer;
+    font-size: 30px;
+    background-color: Transparent;
+    background-repeat: no-repeat;
 }
 
 
@@ -120,7 +177,7 @@ footer {
     margin-top: 230px;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 30%;
     background-color: rgb(0, 0, 0);
     color: rgb(226, 221, 221);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
